--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 client/node_modules
 server/node_modules
 server/.env
+client/.env
 
 /.pnp
 .pnp.js
@@ -24,3 +25,4 @@ server/.env
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+client/.env
